remove references to local/remote

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <input class="search" placeholder="Search" />
       <input type="radio" name="filter" value="all" checked>All</input>
       <input type="radio" name="filter" value="local">GitHub Only</input>
-      <input type="radio" name="filter" value="remote">Wiki Only</input>
+      <input type="radio" name="filter" value="remote">RosettaCode Only</input>
       <input type="radio" name="filter" value="unimplemented">Unimplemented</input>
       <table id="tasks">
         <thead>
           <tr>
             <td>Title</td>
-            <td>Local</td>
-            <td>Remote</td>
+            <td>GitHub</td>
+            <td>RosettaCode</td>
           </tr>
         </thead>
         <tbody class="list">
