--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Rust-Rosetta Coverage</title>
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js" type="text/javascript"></script>
-    <script src="https://listjs.com/no-cdn/list.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.2.0/list.min.js"></script>
     <link rel="stylesheet" href="vendor/arewewebyet.css" />
   </head>
   <body>
